--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,207 @@
+html{
+    font-size: 62%;
+    box-sizing: border-box;
+    scroll-snap-type: y mandatory;
+    }
+
+.servicio,
+.navegacion-principal,
+.formulario{
+    scroll-snap-align: center;
+    scroll-snap-stop:always;
+}
+
+body{
+    font-size: 16px;
+    font-family: 'krub'sans-serif ;
+
+    background-image: radial-gradient(red, yellow, blue);
+}
+
+.contenedor{
+    max-width: 120em;
+    margin: auto;
+}
+
+.boton{
+    background-color: aquamarine;
+    padding: 1rem 3rem;
+    margin-top: 3rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase ;
+    font-weight: bold;
+    border-radius: 5rem;
+    width: 90%;
+    text-align: center;
+    border: none;
+}
+
+/*Medida para dispositivos de 768px*/
+@media(min-width:768px){
+    .boton{
+    width: auto;
+    }
+}
+
+.hero{
+    background-image: url(hero.png);
+    background-repeat: no-repeat;   
+    background-size: cover;
+    height: 450px;
+    position: relative;
+    margin-bottom: 2rem;
+}
+.contenedor-hero{
+    position: absolute;
+    background-color: rgba(0, 0, 7, 0.397);
+background-color: rgb(0, 0, 0 /70%);
+width: 100%;
+height: 100%;
+
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;    
+}
+
+/*Tipografia de fuentes de la web*/
+
+h1{
+    font-size: 3.8rem;
+}
+
+h2{
+    font-size: 2.8rem;
+}
+
+h3{
+    font-size: 1.8rem;
+}
+h1,h2,h3{
+    text-align:center
+}
+
+/*titulos*/
+.titulo span{
+    font-size: 2rem;
+}
+
+.w-sm-100{
+    width: 100%;
+}
+
 .nav-bg{
     background-color: aquamarine;
 }
+
+.navegacion-principal{
+    display: flex;
+    flex-direction: column;
+}
+
+.navegacion-principal a{
+    display: block; /*Barra de busqueda de navegacion principal */
+    text-align: center;
+    color:white;
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 500;
+    padding: 1rem;
+}
+
+.navegacion-principal a:hover{
+    background-color: brown;
+    color: yellowgreen;
+}
+
+.contenedor-hero h2{
+    color: blue;
+}
+
+.contenedor-hero .ubicacion{
+    display: flex;
+    align-items: center;    
+}
+
+.Servicio h1{
+    font-weight: 900;
+    color: darkcyan;
+}
+
+.Servicio p{
+    line-height: 2; /*Salto de linea mas largo*/
+    text-align: center;
+}
+
+.Servicio .icono{
+    height: 15rem;
+    width: 15rem;
+    background-color: blue;
+    border-radius: 50%;
+    align-items:center;
+}
+
+/*FORMULARIO*/
+.formulario{
+    background-color: grey;
+    width: min(60rem, 100%);
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset{
+    border: none;
+}
+
+.formulario .legend{
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-top: 2rem;
+    color:skyblue;
+    text-decoration: underline;
+}
+
+@media (min-width:768px){
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns:50%, 50%;
+        grid-template-rows: auto auto 20 rem;
+        column-gap: 1rem; 
+    }
+}
+    .campo:nth-child(3),
+    .campo:nth-child(4){
+        grid-column: 1 / 3
+    }
+
+    .campo{
+        margin-bottom: 1rem;
+    }
+
+    .campo{
+        color:seagreen;
+        font-weight: bold;
+        margin-bottom: 5rem;
+        display: block;
+    }
+
+    .campo textarea{
+        height: 20rem;
+    }
+    .input-text{
+        width: 100%;
+        border: none;
+        padding: 1rem;
+        border-radius: 5rem;
+    }
+    .footer{
+        text-align: center;
+    }
+
+
+
+
